--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
     "private": true,
     "description": "MoonBit bindings for Web APIs",
     "scripts": {
-        "generate": "rm -f ./src/*.mbt && webidl-bindgen.mbt --all --per-spec -o ./src/"
+        "generate": "rm -f ./src/*.mbt && webidl-bindgen.mbt --all --per-spec -o ./src/ && moon fmt"
     },
     "devDependencies": {
-        "webidl-bindgen.mbt": "^0.2.7"
+        "webidl-bindgen.mbt": "^0.3.2"
     }
 }
