chore: use English error messages in .envrc

--- a/.envrc
+++ b/.envrc
@@ -1,8 +1,8 @@
 #!/usr/bin/env bash
 
 if ! has devenv; then
-  log_error "devenv がインストールされていません"
-  log_error "インストール: https://devenv.sh/getting-started/"
+  log_error "devenv is not installed"
+  log_error "Install: https://devenv.sh/getting-started/"
   return 1
 fi
 
